# bauke-xyz

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package.json
source/: build.rs  copy.rs  index.html  index.js  main.rs  minify.rs  userscripts.js  userstyles.js
source/components/: mod.rs  page_footer.rs  page_header.rs  page_main.rs
source/css/: index.css  libraries.css  userscripts.css  userstyles.css
source/discord/: index.html
source/js/: listenbrainz.js
source/libraries/: index.html
source/netlify/: _redirects
source/routes/: home.rs  mod.rs  userstyles.rs
source/scss/: _love.scss  _mixins.scss  _variables.scss  common.scss  index.scss  libraries.scss  mixins.scss  mod.rs  modern-normalize.scss  userscripts.scss  userstyles.scss  video.scss
source/scss/components/: _errors.scss  _listenbrainz.scss  _page-footer.scss  _page-header.scss  _page-main.scss  _userstyles.scss
source/templates/: base.html  drg-mods.html  index.html  mod.rs  userstyles.html  video.html
source/userscripts/: index.html
source/userstyles/: index.html
source/video/: filters.rs  mod.rs
source/video/2022/: 2022-01-16-Ip5J1LTd8Gk.md  2022-01-16-VjU-Id4gs18.md  2022-01-16-m6Yah6GyW-g.md  2022-01-17-w4oRDd2fybk.md  2022-01-18-Gloz61Dw8x4.md  2022-01-18-cMzU0nE1cSo.md  2022-01-19-8xUq2JO9ETc.md  2022-01-20-tfOMqvli_Pg.md  2022-01-22-vUhm3UoTf78.md  2022-01-23-hc_PwibsZRI.md  2022-01-24-qTGumEaVE3g.md  2022-01-25-0kW5RVGAYno.md  2022-01-26-SgyWLeUPDeE.md  2022-01-27-InqqFwV0jWI.md  2022-01-28-z-G49AcwgB8.md  2022-01-29-jSCZ14mZI9s.md  2022-01-30-RlvDM3_lPc0.md  2022-01-31-YCjH0GvytBc.md  2022-01-31-r-_QyaigSgg.md  (+18 more)
submodules/: .gitkeep  update.sh
(+1 files in other folders)
