# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "bauke-xyz"
description = "https://bauke.xyz"
version = "1.0.0"
edition = "2018"
repository = "https://git.holllo.cc/Bauke/bauke.xyz"
license = "AGPL-3.0-or-later"

[[bin]]
name = "bauke-xyz"
path = "source/main.rs"

[dependencies]
askama = "0.11.1"
color-eyre = "0.6.1"
rsass = "0.23.4"
userstyles = { git = "https://git.holllo.cc/Bauke/userstyles" }
