# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "bauke-xyz"
description = "Bauke's website."
repository = "https://git.bauke.xyz/Bauke/bauke-xyz"
license = "AGPL-3.0-or-later"
version = "1.0.0"
authors = ["Bauke <me@bauke.xyz>"]
edition = "2021"

[[bin]]
name = "bauke-xyz"
path = "source/main.rs"

[dependencies]
askama = "0.11.1"
color-eyre = "0.6.2"
comrak = "0.15.0"
minify-html = "0.10.7"
rsass = "0.23.4"
toml-frontmatter = "0.1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.152"

[dependencies.userstyles]
git = "https://git.bauke.xyz/Bauke/userstyles"
rev = "8aa9ad3"
